--- a/public/room.html
+++ b/public/room.html
@@ -7,9 +7,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/6510466b6c.js" crossorigin="anonymous"></script>
     <script>
         const params = new URLSearchParams(location.search);
-        if (!params.get("name")) location.href = "/";
         if (!params.get("room")) location.href = "/";
     </script>
 </head>
