--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,14 @@
                 <div class="subtext">No sign ups required. Open Source platform.</div>
                 </div>
                 <button id="createroom" class="createroom-butt unselectable">Create Room</button><br>
-                <input type="text" name="room" spellcheck="false" placeholder="Enter Room Code" id="room" class="roomcode"><br>
+                <input type="text" name="room" spellcheck="false" placeholder="Enter Room Code" id="roomcode" class="roomcode"><br>
                 <div class="joinroom unselectable" id="joinroom">Join Room</div>
             </div>
             <div class="video-cont">
                 <video class="video-self" autoplay muted playsinline></video>
                 <div class="settings">
-                    <div class="mic"><i class="fas fa-microphone"></i></div>
-                    <div class="webcam"><i class="fas fa-video"></i></div>
+                    <div class="device" id="mic"><i class="fas fa-microphone"></i></div>
+                    <div class="device" id="webcam"><i class="fas fa-video"></i></div>
                 </div>
             </div>
         </div>
