audo/video buttons work now

--- a/public/room.html
+++ b/public/room.html
@@ -40,6 +40,12 @@
                     <div class="novideo">
                         <i class="fas fa-video"></i>
                     </div>
+                    <div class="screenshare">
+                        <i class="fas fa-desktop"></i>
+                    </div>
+                    <div class="board">
+                        <i class="fas fa-chalkboard"></i>
+                    </div>
                     <div class="cutcall">
                         <i class="fas fa-phone-slash"></i>
                     </div>
