--- a/public/room.html
+++ b/public/room.html
@@ -27,8 +27,12 @@
         <div class="left-cont">
 
             <div class="video-cont-single" id="vcont">
-                <video class="video-dummy" id="vd1" autoplay playsinline>
-                </video>
+                <div class="video-box">
+                    <video class="video-frame" id="vd1" autoplay playsinline>
+                    </video>
+                    <div class="nametag" id="myname">yourname</div>
+                </div>
+                
                 
             </div>
 
